[workspace]
resolver = "2"

members = [
    "rsbinder",
    "rsbinder-aidl",
    "rsbinder-tools",
    "tests",
    "example-hello",
]

[workspace.package]
version = "0.5.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Jeff Kim <hiking90@gmail.com>"]
homepage = "https://hiking90.github.io/rsbinder-book/"
repository = "https://github.com/hiking90/rsbinder"
documentation = "https://docs.rs/rsbinder"
rust-version = "1.85"

keywords = ["android", "binder", "aidl", "linux"]

[workspace.dependencies]
rsbinder = { version = "0.5.2", path = "rsbinder" }
log = "0.4"
env_logger = "0.11"
anstyle = "1.0"
tokio = { version = "1.49", default-features = false }
async-trait = "0.1"
rsbinder-aidl = { version = "0.5.2", path = "rsbinder-aidl" }
pest = "2.8"
pest_derive = "2.8"
convert_case = "0.11"
serde = { version = "1.0", features = ["derive"] }
tera = "1.20.*"
similar = "2.4"
pretty_hex = { version = "0.4", package = "pretty-hex" }
downcast-rs = "2.0"
rustix = "1.1"
clap = "4.5"
rsproperties = "0.3"

[patch.crates-io]
chrono = { git = "https://github.com/chronotope/chrono", tag = "v0.4.41" }
