[workspace]
resolver = "2"

members = [
    "rsbinder",
    "rsbinder-aidl",
    "rsbinder-tools",
    "tests",
    "example-hello",
]

# The cargo-fuzz crate needs a nightly toolchain + libFuzzer; keep it
# out of normal `cargo build`/`test`. See fuzz/Cargo.toml.
exclude = ["fuzz"]

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Jeff Kim <hiking90@gmail.com>"]
homepage = "https://hiking90.github.io/rsbinder/"
repository = "https://github.com/hiking90/rsbinder"
documentation = "https://docs.rs/rsbinder"
rust-version = "1.85"

keywords = ["android", "binder", "aidl", "linux"]

[workspace.dependencies]
rsbinder = { version = "0.9.0", path = "rsbinder" }
log = "0.4"
env_logger = "0.11"
anstyle = "1.0"
tokio = { version = "1.52", default-features = false }
async-trait = "0.1"
rsbinder-aidl = { version = "0.9.0", path = "rsbinder-aidl" }
pest = "2.8"
pest_derive = "2.8"
convert_case = "0.11"
serde = { version = "1.0", features = ["derive"] }
tera = { version = "1.20.*", default-features = false }
similar = "3.1"
pretty_hex = { version = "0.4", package = "pretty-hex" }
rustix = "1.1"
libc = "0.2"
clap = "4.6"
rsproperties = "0.5"
miette = { version = "7.6", features = ["fancy"] }
thiserror = "2"
# dev-only: serializes the handful of rsbinder unit tests that share the
# process-wide `ProcessState` singleton + single binder fd (group key
# `binder`). default-features = false drops the `logging`/`async` features
# (and the `futures` dep) — every gated test is a sync `#[test]`.
serial_test = { version = "3", default-features = false }
