[package]
name = "example-hello"
version = { workspace = true }
publish = false
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Build the RPC (binder-over-socket) example bins. Off by default so
# the normal `cargo build --workspace` and the kernel-binder examples
# are unchanged; opt in explicitly:
#   cargo run -p example-hello --features rpc --bin rpc_hello_service
#   cargo run -p example-hello --features rpc --bin rpc_hello_client
rpc = ["rsbinder/rpc"]
# Lift the EXPERIMENTAL multi-connection slot-cap clamp (plan 2-12).
# Required by `rpc_multiconn_interop_server` since that bin's whole
# purpose is to exercise N>=2 incoming slots — without this feature
# the attach arm clamps the cap to 1 and the bin can only ever serve
# the founding connection.
rpc-experimental-multiconn = ["rpc", "rsbinder/rpc-experimental-multiconn"]
# Subplan 2-13 — opt in to the android-16 accessor bridge symbols
# (`hub::android_16::resolve_accessor`); only used by the STAGE3
# interop client.
android_16 = ["rsbinder/android_16"]

[[bin]]
name = "rpc_hello_service"
required-features = ["rpc"]

[[bin]]
name = "rpc_hello_client"
required-features = ["rpc"]

# Subplan 2-13 D.8 STAGE3 — rsbinder side of the IAccessor bridge
# real-libbinder interop. Cross-compile with
#   cargo ndk -t arm64-v8a -p 36 build -p example-hello \
#       --features rpc,android_16 --bin rpc_accessor_interop_client
# and run on the android-16 emulator alongside the C++ launcher
# (`cpp/rpc_accessor_interop_launcher.cpp`). See cpp/run_stage3.sh.
[[bin]]
name = "rpc_accessor_interop_client"
required-features = ["rpc", "android_16"]

# Subplan 2-14 D.9 STAGE3 — rsbinder server side of the IAccessor
# *register*-side real-libbinder interop (the role-inverse of 2-13 D.8).
# rsbinder vends an IAccessor via `LocalAccessor` + `RpcServer`; a real
# libbinder C client calls `addConnection()` over kernel binder, then
# drives an RPC root over the preconnected fd. Cross-compile with
#   cargo ndk -t arm64-v8a -p 36 build -p example-hello \
#       --features rpc,android_16 --bin rpc_accessor_register_interop_server
# and run on the android-16 emulator alongside the C++ launcher
# (`cpp/rpc_accessor_register_interop_launcher.cpp`). See
# cpp/run_stage3_register.sh.
[[bin]]
name = "rpc_accessor_register_interop_server"
required-features = ["rpc", "android_16"]

# Subplan 2-12 Phase D / AC-12.6 — rsbinder side of the multi-
# connection-per-session real-libbinder interop gate. Pairs with
# cpp/rpc_multiconn_interop_launcher (a real libbinder client built
# with `ARpcSession_setMaxOutgoingConnections(2) + setMaxIncoming
# Threads(2)`). Cross-compile with
#   cargo ndk -t arm64-v8a -p 36 build -p example-hello \
#       --features rpc-experimental-multiconn --bin rpc_multiconn_interop_server
# and run on the android-16 emulator alongside cpp/run_stage3_
# multiconn.sh.
[[bin]]
name = "rpc_multiconn_interop_server"
required-features = ["rpc-experimental-multiconn"]

[dependencies]
rsbinder = { workspace = true, features = ["android_10_plus"] }
env_logger = { workspace = true }
async-trait = { workspace = true }

[build-dependencies]
rsbinder-aidl = { workspace = true, features = ["async"] }
