[package]
name = "example-hello"
version = { workspace = true }
publish = false
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Build the RPC (binder-over-socket) example bins. Off by default so
# the normal `cargo build --workspace` and the kernel-binder examples
# are unchanged; opt in explicitly:
#   cargo run -p example-hello --features rpc --bin rpc_hello_service
#   cargo run -p example-hello --features rpc --bin rpc_hello_client
rpc = ["rsbinder/rpc"]
# Subplan 2-13 — opt in to the android-16 accessor bridge symbols
# (`hub::android_16::resolve_accessor`); only used by the STAGE3
# interop client.
android_16 = ["rsbinder/android_16"]

[[bin]]
name = "rpc_hello_service"
required-features = ["rpc"]

[[bin]]
name = "rpc_hello_client"
required-features = ["rpc"]

# Plan 2-16 Phase D — the cross-transport facade example: identical
# service/registration/call code, kernel vs RPC chosen by one line. Uses
# `rsbinder::service::rpc`, so it is gated on the `rpc` feature.
#   cargo run -p example-hello --features rpc --bin unified_service rpc
#   cargo run -p example-hello --features rpc --bin unified_client rpc
[[bin]]
name = "unified_service"
required-features = ["rpc"]

[[bin]]
name = "unified_client"
required-features = ["rpc"]

# Plan 2-16 handler-side authorization example: the service impl authorizes
# each call via `rsbinder::calling_caller()` and denies with EX_SECURITY.
# Uses `rsbinder::Caller` / `rpc::PeerIdentity`, so gated on the `rpc` feature.
#   cargo run -p example-hello --features rpc --bin authz_service
#   cargo run -p example-hello --features rpc --bin authz_client
[[bin]]
name = "authz_service"
required-features = ["rpc"]

[[bin]]
name = "authz_client"
required-features = ["rpc"]

# Subplan 2-13 D.8 STAGE3 — rsbinder side of the IAccessor bridge
# real-libbinder interop. Cross-compile with
#   cargo ndk -t arm64-v8a -p 36 build -p example-hello \
#       --features rpc,android_16 --bin rpc_accessor_interop_client
# and run on the android-16 emulator alongside the C++ launcher
# (`cpp/rpc_accessor_interop_launcher.cpp`). See cpp/run_rpc_accessor_interop.sh.
[[bin]]
name = "rpc_accessor_interop_client"
required-features = ["rpc", "android_16"]

# Subplan 2-14 D.9 STAGE3 — rsbinder server side of the IAccessor
# *register*-side real-libbinder interop (the role-inverse of 2-13 D.8).
# rsbinder vends an IAccessor via `LocalAccessor` + `RpcServer`; a real
# libbinder C client calls `addConnection()` over kernel binder, then
# drives an RPC root over the preconnected fd. Cross-compile with
#   cargo ndk -t arm64-v8a -p 36 build -p example-hello \
#       --features rpc,android_16 --bin rpc_accessor_register_interop_server
# and run on the android-16 emulator alongside the C++ launcher
# (`cpp/rpc_accessor_register_interop_launcher.cpp`). See
# cpp/run_rpc_accessor_register_interop.sh.
[[bin]]
name = "rpc_accessor_register_interop_server"
required-features = ["rpc", "android_16"]

# Subplan 2-12 Phase D + C — rsbinder side of the multi-
# connection-per-session real-libbinder interop gate. Pairs with
# cpp/rpc_multiconn_interop_launcher (a real libbinder client built
# with `ARpcSession_setMaxOutgoingConnections(2) + setMaxIncoming
# Threads(1)`). Cross-compile with
#   cargo ndk -t arm64-v8a -p 36 build -p example-hello \
#       --features rpc --bin rpc_multiconn_interop_server
# and run on the android-16 emulator alongside
# cpp/run_rpc_multiconn_interop.sh. AC-12.6 (a) twoway + (b) oneway both PASS post-
# Phase C (2026-05-28); the prior EXPERIMENTAL gate was removed.
[[bin]]
name = "rpc_multiconn_interop_server"
required-features = ["rpc"]

[dependencies]
rsbinder = { workspace = true, features = ["android_10_plus"] }
env_logger = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rustix = { workspace = true, features = ["process"] }
libc = { workspace = true }

[build-dependencies]
rsbinder-aidl = { workspace = true, features = ["async"] }
