[package]
name = "rsbinder-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsbinder = { path = "../rsbinder" }
env_logger = "0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "hello_client"
path = "src/hello_client.rs"