[package]
name = "rsbinder-aidl"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "This is a AIDL compiler for rsbinder."
homepage = "https://hiking90.github.io/rsbinder-book/"
repository = "https://github.com/hiking90/rsbinder/rsbinder-aidl"
readme = "README.md"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["async"]
sync = []
async = []

[dependencies]
pest = "2.7"
pest_derive = "2.7"
convert_case = "0.6"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
tera = "1.19"

[dev-dependencies]
similar = "2.4"
