[package]
name = "rsbinder-aidl"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "This is a AIDL compiler for rsbinder."
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
rust-version = { workspace = true }
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["async"]
sync = []
async = []

[dependencies]
pest = { workspace = true }
pest_derive = { workspace = true }
convert_case = { workspace = true }
serde = { workspace = true }
tera = { workspace = true }

[dev-dependencies]
similar = { workspace = true }
