[package]
name = "rsbinder-hub"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "This provides an API for the Binder service manager."
homepage = "https://github.com/hiking90/rsbinder"
repository = "https://github.com/hiking90/rsbinder/rsbinder-hub"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
rsbinder = { version = "0.2.0", path = "../rsbinder" }
log = "0.4"
async-trait = "0.1"

[build-dependencies]
rsbinder-aidl = { version = "0.2.0", path = "../rsbinder-aidl" }

[dev-dependencies]
env_logger = "0.11"
