[package]
name = "rsbinder-tests"
version = "0.2.3"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
rsbinder = { version = "0.2.3", path = "../rsbinder" }
tokio = { version = "1.37", features = ["full"] }
env_logger = "0.11"
nix = "0.28"
async-trait = "0.1"

[build-dependencies]
rsbinder-aidl = { version = "0.2.3", path = "../rsbinder-aidl" }
