[package]
name = "rsbinder-tests"
version = { workspace = true }
edition = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { workspace = true }
rsbinder = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
nix = { workspace = true }
async-trait = { workspace = true }

[build-dependencies]
rsbinder-aidl = { workspace = true }
