[package]
name = "rsbinder-tokio"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "This crate supports the operation of rsbinder on the tokio runtime."
homepage = "https://github.com/hiking90/rsbinder"
repository = "https://github.com/hiking90/rsbinder/rsbinder-hub"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
rsbinder = { version = "0.2.0", path = "../rsbinder", features = ["async"] }
rsbinder-hub = { version = "0.2.0", path = "../rsbinder-hub", features = ["async"] }
log = "0.4"
tokio = { version = "1.35", features = ["full"] }
