[package]
name = "rsbinder-tools"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "This provides a few CLI binder tools for Linux."
homepage = "https://hiking90.github.io/rsbinder-book/"
repository = "https://github.com/hiking90/rsbinder/rsbinder-tools"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
rsbinder = { version = "0.2.1", path = "../rsbinder" }
log = "0.4"
env_logger = "0.11"
nix = "0.28"
anstyle = "1.0"
