[package]
name = "rsbinder"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "rsbinder provides crates implemented in pure Rust that make Binder IPC available on both Android and Linux."
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
rust-version = { workspace = true }
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio"]
tokio = ["async", "tokio/full"]
async = ["rsbinder-aidl/async", "async-trait"]
android_11 = []
android_12 = []
android_13 = []
android_14 = []
android_16 = []
android_11_plus = ["android_11", "android_12", "android_13", "android_14", "android_16"]
android_12_plus = ["android_12", "android_13", "android_14", "android_16"]
android_13_plus = ["android_13", "android_14", "android_16"]
android_14_plus = ["android_14", "android_16"]
android_16_plus = ["android_16"]

[dependencies]
rustix = { workspace = true, features = ["process", "param", "mm"] }
log = { workspace = true }
pretty_hex = { workspace = true }
downcast-rs = { workspace = true }
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
rsproperties.workspace = true

[build-dependencies]
rsbinder-aidl = { workspace = true, features = ["async"] }

[dev-dependencies]
env_logger = { workspace = true }
