[package]
name = "rsbinder"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "rsbinder provides crates implemented in pure Rust that make Binder IPC available on both Android and Linux."
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
rust-version = { workspace = true }
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[features]
default = ["tokio"]
tokio = ["async", "tokio/full"]
async = ["rsbinder-aidl/async", "async-trait"]
# RPC transport (binder-over-socket) — a separate stack from the kernel
# binder path. Off by default; enabling it pulls in rustix's `net` APIs
# (socketpair / SO_PEERCRED / SCM_RIGHTS) and `getrandom` (CSPRNG for
# 32-byte RPC session ids — subplan 2-12 A0a/A0b makes the id a
# capability for attach, so a CSPRNG is load-bearing) only when `rpc` is
# selected, so default and `--no-default-features` builds carry zero
# RPC/net cost. See plan/2-rpc-transport.md and
# plan/2-1-skeleton-transport.md.
rpc = ["rustix/net", "dep:getrandom"]
# Plaintext TCP transport — DEBUG / interop bring-up ONLY, never
# production (use `tls` for real networks). Gated separately so it is
# absent from a plain `rpc` build. See plan/2-1 §2-1.f2 / AC-1.8.
rpc-tcp-debug = ["rpc"]
# vsock backend (subplan 2-4 track V). host↔VM, trust = hypervisor VM
# isolation. **Linux / Android** (the `vsock` crate's `AF_VSOCK` impl
# covers both `target_os = "linux"` and `"android"`; the source is
# gated to those — Android is the Virtualization Framework / Microdroid
# target, subplan 2-15). The transport code is cfg'd out on other
# targets. Zero cost when off (optional dep). See plan/2-4-vsock-tls.md.
rpc-vsock = ["rpc", "dep:vsock"]
# TLS backend over rustls (subplan 2-4 track T) for untrusted
# channels. Zero cost when off (optional deps). rsbinder never
# invents crypto — it delegates entirely to rustls (plan §5).
rpc-tls = ["rpc", "dep:rustls", "dep:sha2"]
# `rpc-experimental-multiconn` retired 2026-05-28: AC-12.6 (a) twoway
# + (b) oneway PASS lifted multi-connection-per-session
# (`RpcServer::set_max_threads(N >= 2)`) out of EXPERIMENTAL. The
# slot-cap clamp is gone — `set_max_threads(N)` is now the true cap on
# every build, with the AOSP-faithful `setMaxIncomingThreads` semantic.
# See `plan/2-12-multi-connection-per-session.md` §8 (Phase D wire
# fix) + §9 (Phase C asyncTodo).
android_10 = []
android_11 = []
android_12 = []
android_13 = []
android_14 = []
android_16 = []
android_10_plus = ["android_10", "android_11", "android_12", "android_13", "android_14", "android_16"]
android_11_plus = ["android_11", "android_12", "android_13", "android_14", "android_16"]
android_12_plus = ["android_12", "android_13", "android_14", "android_16"]
android_13_plus = ["android_13", "android_14", "android_16"]
android_14_plus = ["android_14", "android_16"]
android_16_plus = ["android_16"]

[dependencies]
rustix = { workspace = true, features = ["process", "param", "mm"] }
log = { workspace = true }
pretty_hex = { workspace = true }
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
rsproperties.workspace = true
# RPC additive backends (subplan 2-4) — all optional, feature-gated,
# so default / `rpc` / `rpc-tcp-debug` builds pull none of them.
vsock = { version = "0.5", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"], optional = true }
sha2 = { version = "0.11", optional = true }
# CSPRNG for the 32-byte per-session RPC id (subplan 2-12 A0b: the id
# is the *capability* a 2nd connection echoes to attach onto an
# existing session — predictable ids would be an attach-hijack
# primitive). Pulled in only when `rpc` is selected; already
# transitively in the build tree (via `rustls` / `ring`), so no new
# leaf dep on default builds either.
getrandom = { version = "0.4", optional = true }

# subplan 2-9 Phase A: macOS/BSD peer-credential resolution
# (`getpeereid`/`LOCAL_PEERPID`) — `rustix` exposes only Linux `SO_PEERCRED`.
[target.'cfg(all(unix, not(target_os = "linux")))'.dependencies]
libc = { workspace = true }

# Plan 4-5 Phase C: `sched_getscheduler` + SCHED_* constants are in libc;
# rustix omits the SCHED_* constants.
[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc = { workspace = true }

[build-dependencies]
rsbinder-aidl = { workspace = true, features = ["async"] }

[dev-dependencies]
env_logger = { workspace = true }
serial_test = { workspace = true }

# loom is only used by tests gated on `--cfg loom`. Run with:
#   RUSTFLAGS="--cfg loom" cargo test --test loom_cache_pin --release
# It is NOT a normal test dependency — without the cfg, the gated test
# files compile to empty crates.
[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"
