[package]
name = "tests"
version = { workspace = true }
edition = { workspace = true }
publish = false
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { workspace = true }
rsbinder = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
rustix = { workspace = true, features = ["pipe"] }
async-trait = { workspace = true }
log.workspace = true

[build-dependencies]
rsbinder-aidl = { workspace = true }
