[package]
name = "tests"
version = { workspace = true }
edition = { workspace = true }
publish = false
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsbinder = { workspace = true, features = ["android_11_plus"] }
tokio = { workspace = true }
env_logger = { workspace = true }
rustix = { workspace = true, features = ["pipe"] }
async-trait = { workspace = true }
log.workspace = true

[build-dependencies]
rsbinder-aidl = { workspace = true, features = ["async"] }
