[package]
name = "tests"
version = { workspace = true }
edition = { workspace = true }
publish = false
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Subplan 2-6.B: off by default so the kernel-binder Android CI build
# of this crate (`cargo test -p tests`) pulls in zero RPC code. The
# generated-stub RPC e2e (`tests/rpc_generated_stub.rs`) runs only
# under `--features rpc` (or `rpc-tcp-debug`).
[features]
rpc = ["rsbinder/rpc"]
rpc-tcp-debug = ["rsbinder/rpc-tcp-debug", "rpc"]

[dependencies]
rsbinder = { workspace = true, features = ["android_10_plus"] }
tokio = { workspace = true }
env_logger = { workspace = true }
rustix = { workspace = true, features = ["pipe"] }
async-trait = { workspace = true }
log.workspace = true

# Mesh integration node: one binary, configured by argv into a kernel
# and/or RPC role. Driven by `tests/mesh_rpc.rs` (+ `mesh_kernel.rs`).
# Requires `rpc` because every node fronts at least one RPC endpoint.
[[bin]]
name = "mesh_node"
path = "src/bin/mesh_node.rs"
required-features = ["rpc"]

[build-dependencies]
rsbinder-aidl = { workspace = true, features = ["async"] }
